[tool.poetry]
name = "ai-browser"
version = "0.1.0"
description = ""
authors = ["zengdw <309606298@qq.com>"]
readme = "README.md"
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
dashscope = "^1.20.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
